--- a/resources/manifests/kube-proxy.yaml
+++ b/resources/manifests/kube-proxy.yaml
@@ -27,7 +27,7 @@ spec:
         - --hostname-override=$(NODE_NAME)
         - --kubeconfig=/etc/kubernetes/kubeconfig
         - --proxy-mode=iptables
-        - --nodeport-addresses 10.0.0.0/8
+        - --nodeport-addresses=10.0.0.0/8
         env:
           - name: NODE_NAME
             valueFrom:
